FIx photo preview content text overflow

--- a/source/less/blocks/photo-preview.less
+++ b/source/less/blocks/photo-preview.less
@@ -28,6 +28,10 @@
   margin: 0;
 }
 
+.photo-preview__content {
+  flex: 1;
+}
+
 .photo-preview__author {
   font-size: 14px;
   line-height: 24px;
